// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameCard functionality and rendering GiverGameCard renders correctly 1`] = `
<div
  className="sc-AxjAm hDlFTS"
>
  <div
    className="sc-AxiKw dGnLMo"
  >
    Will Smith
  </div>
  <div
    className="sc-AxhCb JZaCe"
  >
    <ul
      className="sc-Axmtr dHjpTi"
    >
      <li
        className="sc-AxhUy kWmTzm"
      >
        Fresh Prince
      </li>
      <li
        className="sc-AxhUy kWmTzm"
      >
        Philadelphia
      </li>
      <li
        className="sc-AxhUy kWmTzm"
      >
        Jazzy Jeff
      </li>
      <li
        className="sc-AxhUy kWmTzm"
      >
        Independence Day
      </li>
      <li
        className="sc-AxhUy kWmTzm"
      >
        Jada Pinkett
      </li>
    </ul>
  </div>
  <div
    className="sc-fzplWN buDbqD"
  >
    <button
      className="sc-AxmLO gmmVt"
      disabled={false}
      onClick={[Function]}
    >
      Skip!
    </button>
    <button
      className="sc-AxmLO sc-fzozJi jlLOkV"
      disabled={false}
      onClick={[Function]}
    >
      Next!
    </button>
  </div>
</div>
`;

exports[`GameCard functionality and rendering TeamGameCard renders correctly for giverTeam 1`] = `
<div
  className="sc-AxjAm hDlFTS"
>
  <div
    className="sc-AxiKw dGnLMo"
  >
    Guess!
  </div>
  <div
    className="sc-AxhCb JZaCe"
  >
    <p
      className="sc-fznZeY dEjDoi"
    >
      It's your teams turn to guess the word! 
      <span
        className="sc-fzokOt gzbudF"
      >
        Joe
      </span>
       is giving the clues and
       
      <span
        className="sc-fzokOt gzbudF"
      >
        Sam
      </span>
       will be making sure they don't say anything Taboo!
    </p>
  </div>
</div>
`;

exports[`GameCard functionality and rendering TeamGameCard renders correctly for watcherTeam 1`] = `
<div
  className="sc-AxjAm hDlFTS"
>
  <div
    className="sc-AxiKw dGnLMo"
  >
    Relax!
  </div>
  <div
    className="sc-AxhCb JZaCe"
  >
    <p
      className="sc-fznZeY dEjDoi"
    >
      It’s the other team’s turn to give clues and guess! 
      <span
        className="sc-fzokOt gzbudF"
      >
        Sam
      </span>
       will be watching to make sure 
      <span
        className="sc-fzokOt gzbudF"
      >
        Joe
      </span>
       doesn’t say any Taboo words.
    </p>
  </div>
</div>
`;

exports[`GameCard functionality and rendering WatcherGameCard renders correctly 1`] = `
<div
  className="sc-AxjAm hDlFTS"
>
  <div
    className="sc-AxiKw dGnLMo"
  >
    Will Smith
  </div>
  <div
    className="sc-AxhCb JZaCe"
  >
    <ul
      className="sc-Axmtr dHjpTi"
    >
      <li
        className="sc-AxhUy kWmTzm"
      >
        Fresh Prince
      </li>
      <li
        className="sc-AxhUy kWmTzm"
      >
        Philadelphia
      </li>
      <li
        className="sc-AxhUy kWmTzm"
      >
        Jazzy Jeff
      </li>
      <li
        className="sc-AxhUy kWmTzm"
      >
        Independence Day
      </li>
      <li
        className="sc-AxhUy kWmTzm"
      >
        Jada Pinkett
      </li>
    </ul>
  </div>
  <div
    className="sc-fzplWN buDbqD"
  >
    <button
      className="sc-AxmLO sc-fzoLsD cyAtQH"
      disabled={false}
      onClick={[Function]}
    >
      Buzzer!
    </button>
  </div>
</div>
`;
